--- a/views/dubSquaredMedia.ejs
+++ b/views/dubSquaredMedia.ejs
@@ -8,21 +8,21 @@
 </head>
 <body style="background-color: rgba(0,0,0,1); color: rgb(255, 255, 255);">
 
-  <div class="dubGrid">
+  <div class="wixGrid">
     <%for(let i =0;i<data[0].length;i++){%>  
 <%if(data[0][i].status=="show" && data[0][i].serviceCategory=="dubSquaredMedia"){%>
 
       <%let svcName = data[0][i].serviceName%>
       <%let svcNameSlice = svcName.slice(0,21)%>
 
-<div class="wixContainer">
+<div class="dubContainer">
 
   
   <div class="wixTitle">
   <h1><%=data[0][i].serviceName%></h1> 
 
 </div>
-<h2 class="divider">$<%=data[0][i].cost%>.00 | <%=data[0][i].terms%></h2>
+<h2 class="divider">$<%=data[0][i].cost%>.00 <span class="accentDubStyle">|</span> <%=data[0][i].terms%></h2>
 
 <!--PARSE SERVICE DETAILS WITH &&-->
 <div class="wixBody">
