services bug fixed

--- a/views/services.ejs
+++ b/views/services.ejs
@@ -128,7 +128,7 @@
             <td><%=data[1][i].cost%></td>
             <td><%=data[1][i].terms%></td>
             <td><%=data[1][i].serviceCategory%></td>
-            <td><%=data[1][i].serviceDetail%></td>
+            <td><%=data[1][i].serviceDetails%></td>
          
             <td><a href="/editor/?_id=<%=data[1][i]._id%>&ext=_services"><span class="alert"> Edit</span></a></td>
            
