--- a/views/transactions.ejs
+++ b/views/transactions.ejs
@@ -42,7 +42,8 @@
         <!--TRANSACTION ROWS of DATA PLACED IN FORM TO UPDATE-->
         <%for(let i =0;i<data[4].length;i++){%>
             <form action="/updateTransCat/<%=data[4][i]._id%>"method="post">
-<%if(data[4][i].amount<0){%>
+<%if(data[4][i].amount){%>
+                <%if(data[4][i].amount<0){%>
     <tr style="background-color:rgba(232, 185, 180, 0.381)">
         <%}else{%>
             <tr style="background-color:rgba(144, 238, 144, 0.162)">
@@ -54,7 +55,7 @@
                 <td>  <%=data[4][i].postingDate%></td>
                 <td id="tdMoney" class="total">$ <%=modWhole+"."+modChange%></td>   
 
-                <%if(data[4][i].transType=='object'&& transType){%>
+                <%if(data[4][i].transType=='object'&& data[4][i].transType){%>
                 <td>        
         <select name="transType">
               <option value="<%=data[4][i].transType%>"><%=data[4][i].transType%></option>
@@ -89,6 +90,13 @@
 </form>
    <td><form action="delTrans"method="post"><input hidden name="transId" value="<%=data[4][i]._id%>" type="text"><button>delete</button></form></td>
 </tr>
+<%}else{%>
+    <tr>
+        <td><%=data[4][i].postingDate%></td>
+        <td style="min-width:100%"> data model needs update</td>
+
+    </tr>
+<%}%>
 <%}%>
 </tbody>
 </table>
