--- a/views/transactions.ejs
+++ b/views/transactions.ejs
@@ -1,37 +1,33 @@
 
+<!DOCTYPE html>
+<html>
+  <head>
+    
+    <%- include('config/head.ejs')%>
+<!--GOOGLE-->
+<meta name="google-site-verification" content="Pvp74_YXTw6uwsBP-6pTFmbwnjXD7_zXP-WUG4FpWU8" />
+<!--end-->
+</head>
+<body onload="listeners()">   
+  <%- include('config/bkgdImg.ejs')%>            
 
+  <%- include('config/header.ejs')%>
+   
+      
+      <h1 class="h1Span">TRANSACTIONS</h1>
+      <a href="/services"><button>services</button></a>
+      <a href="/accounts"><button>accounts</button></a>
+      <a href="/admin"><button>admin</button></a>
 
-<!--lets really break down this transaction object-->
-<%if(data){%>
-    <%let dataSetArray = []%>
-datafound
-<br>
-        <%for(i=0;i<Object.keys(data).length;i++){%>
-        <%dataSetArray.push(Object.keys(data)[i])%>
-        <%}%>
-data sets:
-<br>
-<ul>
-            <%for(x=0;x<dataSetArray.length;x++){%>
-            <li>
-              <h2>  data[<%=dataSetArray[x]%>]:</h2>
-                <ul>
-                 <!--NESTED DYNAMC UL LIs-->
-                    <%for(let z=0;z<Object.keys(data[x]).length;z++){%>
-                    <li><strong><%=z%>: ~~</strong>  <%=Object.values(data[x][z])%></li>
-                    <%}%>
-                </ul>
+      <a href="/invoice"><button>invoice</button></a>
+      <a href="/dashboard"><button>dashboard</button></a>
+ 
+<div class="eventBody">
+<h1> transactions</h1>
 
-            </li>
-            <%}%>
-</ul>
-<br>
-<%}else{%>
-no data found 
-<br>
-<%}%>
 
 <% if(data[4]) { %>
+    <div class="eventBody">
     <table>
         <thead>
             <th>amount</th>
@@ -91,6 +87,7 @@ no data found
                                 memo = error;
                             }
                             %>
+                            
                         <%= memo %>
                     </td>
                 </tr>
@@ -98,10 +95,13 @@ no data found
                     <!---->
         </tbody>
     </table>
+</div>
 <% } else { %>
     no data 
 <% } %>
 
-
+</div>
+</body>
+</html>
 
     
