--- a/views/services.ejs
+++ b/views/services.ejs
@@ -97,7 +97,7 @@
       
 
         <label for="service-details">Service Detail:</label>
-        <textarea id="serviceDetail" name="serviceDetail" rows="4" cols="50" required></textarea>
+        <textarea id="serviceDetails" name="serviceDetails" rows="4" cols="50" required></textarea>
         <br><br>
         
   
