--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -121,7 +121,21 @@
             <% if(data[2][i].status.paid == true) { %>
               <tr>
                 <td style="border:1px dashed white"> <%=data[2][i].invData.companyId.split('|')[1]%></td>
-                <td style="border:1px dashed white"> <%=data[2][i].invData.serviceName.split('|')[1]%></td>
+                <td style="border:1px dashed white">
+                    <% 
+                      try {
+                        const serviceNames = data[2][i].invData.serviceName.split('|');
+                        for(let j = 1; j < serviceNames.length; j++) { 
+                    %>
+                      <%= serviceNames[j] %><% if(j < serviceNames.length - 1) { %>, <% } %>
+                    <% 
+                        }
+                      } catch (error) {
+                        %>Error: <%= error.message %><%
+                      } 
+                    %>
+                  </td>
+                  
                 <td style="border:1px dashed white"> <%=data[2][i].invTotal%></td>
                 <td style="border:1px dashed white"><%= new Date(data[2][i].date).toLocaleDateString() %></td>
                 <td style="border:1px dashed white"><%= new Date(data[2][i].paymentDate).toLocaleDateString() %></td>
