--- a/views/dashboard copy.ejs
+++ b/views/dashboard copy.ejs
@@ -97,8 +97,8 @@
    <td style="border:1px dashed white"> <%=data[2][i].invTotal%></td>
 
   <td style="border:1px dashed white"><%=data[2][i].date%></td>
-  <td style="border:1px dashed white"><%=data[2][i].paymentDate%></td>
-  <td style="border:1px dashed white"><form action="/unPaid"method="post"><input hidden type="text"name="_id" value="<%=data[2][i]._id%>"><button>revert</button></form></td>
+  <td style="border:1px dashed white"><%=data[2][i].paymentDa <td style="border:1px dashed white"><form action="/unPaid"method="post"><input hidden type="text"name="_id" value="<%=data[2][i]._id%>"><button>revert</button></form></td>
+ 
 </tr>
 
 <!---->
