--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -72,37 +72,7 @@
     <div class="eventBody">
         <h2>paid invoices</h2>
 
-      <!-- Open Invoices Table -->
-<table style="border:1px dashed white">
-    <thead style="text-align: center;">           
-      <th>company</th> 
-      <th>inv total</th> 
-      <th>due date</th> 
-      <th>actions</th>
-    </thead>
-    <tbody>
-      <% try { %>
-        <% if(typeof data[2] == 'object' && data[2]) { %>
-          <% for(let i = 0; i < data[2].length; i++) { %>
-            <% if(data[2][i].status.paid == false && data[2][i].status.draft == false) { %>
-              <tr>
-                <td style="border:1px dashed white"><a href="/clientDashboard/<%=data[2][i].invData.companyId.split('|')[0]%>"> <%=data[2][i].invData.companyId.split('|')[1]%></a></td>
-                <td style="border:1px dashed white"> <%=data[2][i].invTotal%></td>
-                <td style="border:1px dashed white"><%= new Date(data[2][i].due).toLocaleDateString() %></td>
-                <td style="border:1px dashed white">
-                  <!-- ... your form actions ... -->
-                </td>
-              </tr>
-            <% } %>
-          <% } %>
-        <% } %>
-      <% } catch (error) { %>
-        <tr>
-          <td colspan="4">Error: <%= error.message %></td>
-        </tr>
-      <% } %>
-    </tbody>
-  </table>
+
   
   <!-- Paid Invoices Table -->
   <table style="border:1px dashed white">
@@ -138,10 +108,28 @@
                   
                 <td style="border:1px dashed white"> <%=data[2][i].invTotal%></td>
                 <td style="border:1px dashed white"><%= new Date(data[2][i].date).toLocaleDateString() %></td>
-                <td style="border:1px dashed white"><%= new Date(data[2][i].paymentDate).toLocaleDateString() %></td>
                 <td style="border:1px dashed white">
-                  <!-- ... your form actions ... -->
-                </td>
+  <% 
+    try {
+      const paymentDate = data[2][i].paymentDate ? data[2][i].paymentDate : data[2][i].status.paymentDate;
+      if (paymentDate) {
+  %>
+    <%= new Date(paymentDate).toLocaleDateString() %>
+  <% 
+      } else {
+  %>
+    N/A
+  <% 
+      }
+    } catch (error) {
+  %>
+    Error: <%= error.message %>
+  <% 
+    } 
+  %>
+</td>
+
+             <td style="border:1px dashed white"><form action="/unPaid"method="post"><input hidden type="text"name="_id" value="<%=data[2][i]._id%>"><button>revert</button></form></td>
               </tr>
             <% } %>
           <% } %>
